<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bottomnav.fragments.CheckinFragment">

        <!--<EditText
            android:id="@+id/editViewDeviceToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/edittext_background"
            android:hint="Device Token"
            android:padding="20sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editViewDeviceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/edittext_background"
            android:hint="Device ID"
            android:padding="20sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editViewDevicesData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/edittext_background"
            android:hint="Devices"
            android:padding="20sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editViewOwnDeviceData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/edittext_background"
            android:hint="Own Device Data"
            android:padding="20sp"
            android:singleLine="true" />-->

        <Button
            android:id="@+id/uploadData"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_dark_background"
            android:text="@string/upload_data"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkIn" />

        <Button
            android:id="@+id/checkIn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/check_in"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/uploadData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/symptom4" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/do_you_experience_any_symptom_today"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/symptom1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/symptom1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fever_or_chills"
            app:layout_constraintBottom_toTopOf="@id/symptom2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintVertical_bias="0.35" />

        <CheckBox
            android:id="@+id/symptom2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cough"
            app:layout_constraintBottom_toTopOf="@+id/symptom3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symptom1" />

        <CheckBox
            android:id="@+id/symptom3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_loss_of_taste_or_smell"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/symptom4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symptom2" />

        <CheckBox
            android:id="@+id/symptom4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sore_throat"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/checkIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symptom3" />


</androidx.constraintlayout.widget.ConstraintLayout>